https-dns-proxy: fix json

--- a/root/usr/share/rpcd/acl.d/luci-app-https-dns-proxy.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-https-dns-proxy.json
@@ -2,6 +2,20 @@
 	"luci-app-https-dns-proxy": {
 		"description": "Grant UCI access for luci-app-https-dns-proxy",
 		"read": {
+			"cgi-io": [
+				"exec"
+			],
+			"file": {
+				"/usr/lib/lua/luci/https-dns-proxy/providers/*": [
+					"read"
+				],
+				"/etc/init.d/dnsmasq *": [
+					"exec"
+				],
+				"/etc/init.d/https-dns-proxy *": [
+					"exec"
+				]
+			},
 			"uci": [
 				"https-dns-proxy"
 			]
