https-dns-proxy: convert webui to js
Signed-off-by: Stan Grishin <stangri@melmac.ca>

--- a/root/usr/share/rpcd/acl.d/luci-app-https-dns-proxy.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-https-dns-proxy.json
@@ -7,10 +7,12 @@
 					"getInitList",
 					"getInitStatus",
 					"getPlatformSupport",
+					"getProviders",
 					"getRuntime"
 				]
 			},
 			"uci": [
+				"dnsmasq",
 				"https-dns-proxy"
 			]
 		},
